--- a/Src/main/templates/components/listing_card.html
+++ b/Src/main/templates/components/listing_card.html
@@ -1,6 +1,11 @@
 <div class="card shadow-sm">
+    {% if listing.image %}
     <img class="bd-placeholder-img card-img-top" width="100%" src="{{listing.image.url}}" role="img"
-        aria-label="Placeholder: Thumbnail" focusable="false">
+        aria-label="Placeholder: Thumbnail" focusable="false" >
+    {% else %}
+    <img class="bd-placeholder-img card-img-top" width="100%" src="{% static 'images/logo.png' %}" role="img"
+        aria-label="Placeholder: Thumbnail" focusable="false" >
+    {% endif %}
     <div class="card-body">
         <h4 class="card-text">{{listing.model}}</h4>
         <div class="row justify-content-start align-items-center">
