--- a/Src/main/templates/components/listing_card.html
+++ b/Src/main/templates/components/listing_card.html
@@ -1,3 +1,4 @@
+{% load static %}
 <div class="card shadow-sm">
     {% if listing.image %}
     <img class="bd-placeholder-img card-img-top" width="100%" src="{{listing.image.url}}" role="img"
