--- a/Src/main/templates/views/main.html
+++ b/Src/main/templates/views/main.html
@@ -14,7 +14,7 @@
                         {% if request.user.is_authenticated %}
                         <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
                         {% else %}
-                        <a class="nav-link" href="{% url 'login' %}">Login</a>
+                        <a class="nav-link active" href="{% url 'login' %}">Login</a>
                         {% endif %}
                     </nav>
                 </div>
