--- a/Src/main/templates/components/listing_card.html
+++ b/Src/main/templates/components/listing_card.html
@@ -11,8 +11,13 @@
         <h4 class="card-text">{{listing.model}}</h4>
         <div class="row justify-content-start align-items-center">
             <div class="col-1">
+                {% if listing.seller.photo %}
                 <img src="{{listing.seller.photo.url}}" class="rounded-circle" height="30" width="30"
                 style="object-fit: cover;">
+                {% else %}
+                <img src="{% static 'images/logo.png' %}" class="rounded-circle" height="30" width="30"
+                style="object-fit: cover;">
+                {% endif %}
             </div>
             <div class="col-5">
                 <p class="card-text">{{listing.seller.user.username}}</p>
